fix(BurgerMenu): вынес обработку клика по бургер меню в общий скрипт

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<span>компьютер</span>
 			</div>
 
-			<div class="nav">
+			<div id="navigation" class="nav">
 				<ul>
 					<li><a href="Processor.html">Процессор</a></li>
 					<li><a href="Matherboard.html">Материнская плата</a></li>
@@ -31,7 +31,7 @@
 				</ul>
 			</div>
 
-			<div class="burger">
+			<div id="burger" class="burger">
 				<span></span>
 			</div>
 		</header>
@@ -207,6 +207,6 @@
 
 		<!-- Все скрипты добавляем в конец, чтобы они начинали выполняться после загрузки всего DOM дерева -->
 		<script src="back.js"></script>
-		<script src="burger.js"></script>
+		<!-- <script src="burger.js"></script> -->
 	</body>
 </html>
