fix(Script): переименовал общий файл скрипта скрипт

--- a/index.html
+++ b/index.html
@@ -206,7 +206,6 @@
 		</div>
 
 		<!-- Все скрипты добавляем в конец, чтобы они начинали выполняться после загрузки всего DOM дерева -->
-		<script src="back.js"></script>
-		<!-- <script src="burger.js"></script> -->
+		<script src="index.js"></script>
 	</body>
 </html>
